media/radarr/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
    - name: media
  hostnames:
    - radarr.192.168.86.2.nip.io
  rules:
    - matches:
      backendRefs:
        - name: radarr
          port: 7878
